# care-assist

./: .env.example  .gitignore  CLAUDE.md  TODOS.md  docker-compose.yml  project.config.json  start_backend.sh
backend/: .env.example  .gitignore  DEPLOY.md  Dockerfile  cleanup_db.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  schema.sql
backend/alembic/: env.py
backend/alembic/versions/: 0fe4bdd1b9a7_add_updated_at_to_reports.py  2a3dd7b2d3e0_init_create_9_core_tables.py  78ae0eeca9dd_add_vaccine_library_table.py  dfed678dc90d_add_growth_records_table.py  e5686824a889_add_medications_tables.py
backend/app/: celery_app.py  config.py  main.py
backend/app/ai/: __init__.py  baidu_ocr_provider.py  factory.py  kimi_code_provider.py  kimi_ocr_provider.py  ocr_provider.py  provider.py  tencent_ocr_provider.py
backend/app/api/: ai_conversations.py  auth.py  child.py  export.py  health_events.py  home.py  hospitals.py  indicators.py  medications.py  members.py  reminders.py  reports.py  search.py  summary.py  vaccines.py  ws.py
backend/app/core/: ai_service.py  chronic_packages.py  exceptions.py  indicator_engine.py  indicator_search.py  logging.py  milestone_data.py  ocr_service.py  (+4 more)
backend/e2e/: conftest.py  test_ai_conversation_e2e.py  test_core_path_e2e.py  test_hospital_e2e.py  test_indicator_e2e.py  test_member_e2e.py  test_report_e2e.py  test_search_e2e.py  test_timeline_reminder_e2e.py  test_vaccine_e2e.py
backend/scripts/: demo_kimi_ocr.py  verify_kimi_code.py
backend/static/: privacy.html  terms.html
backend/tests/: conftest.py
(+330 files in other folders)
